# MobileGlues

./: .gitmodules  android_ci_build.bash  build.gradle
.github/workflows/: build.yml
src/main/cpp/: CMakeLists.txt  compile_shaders.py  gles3.h  includes.h  main.c  main.cpp  version.h
src/main/cpp/egl/: egl.c  egl.h  loader.cpp  loader.h
src/main/cpp/gl/: buffer.cpp  buffer.h  drawing.c  drawing.cpp  drawing.h  envvars.cpp  framebuffer.cpp  framebuffer.h  getter.cpp  getter.h  gl.cpp  gl.h  gl_mg.h  gl_native.c  gl_native.cpp  gl_stub.c  gl_stub.cpp  glext.h  log.cpp  log.h  mg.c  mg.cpp  mg.h  multidraw.h  pixel.h  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexattrib.cpp  vertexattrib.h
src/main/cpp/gl/dsa/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h
src/main/cpp/gl/fpe/: defines.h  drawing1x.cpp  drawing1x.h  drawstate1x.cpp  fpe.cpp  fpe.hpp  fpe_defines.h  fpe_shader.c  fpe_shader.cpp  fpe_shader.h  fpe_shadergen.cpp  fpe_shadergen.h  glstate.cpp  list.cpp  list.h  pointer_utils.cpp  pointer_utils.h  state.cpp  state.h  string_utils.c  string_utils.h  transformation.cpp  transformation.h  types.h  vertexpointer.cpp  vertexpointer.h  vertexpointer_utils.cpp  vertexpointer_utils.h  vertexpointerarray.cpp
src/main/cpp/gl/glsl/: cache.h  glsl_for_es.cpp  glsl_for_es.h  preConvertedGlsl.cpp
src/main/cpp/gl/wrap/: legacy_extensions.cpp
src/main/cpp/gles/: gles.h  loader.cpp  loader.h
src/main/cpp/glx/: lookup.cpp
src/main/cpp/include/GL/: gl.h  glext.h
src/main/cpp/include/GLES/: gl3.h
src/main/cpp/include/ankerl/: unordered_dense.h
src/main/cpp/shaders/: shader.frag  shader.vert
src/main/cpp/tests/: sanitycheck_test.cpp
src/main/cpp/tests/fpe/: vertexpointer_test.cpp
src/test/java/com/fcl/plugin/mobileglues/: SanityCheckTest.kt
